--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -4,3 +4,9 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
+.d-f{
+    display:flex;
+    justify-content:space-evenly;
+    align-items: center;
+    height: calc(100vh - 150px);
+}
