--- a/src/pages/download/style.module.scss
+++ b/src/pages/download/style.module.scss
@@ -11,22 +11,22 @@
         text-shadow: 2px 2px 1px #CCC;
         color: rgb(136, 90, 12);
     }
-    .panel-box{
+    .panel_box{
         display: block;
         width: 50%;
         margin: auto;
-        .panel-item{
+        .panel_item{
             margin: 16px auto;
             background:#FFF;
             border-radius: 10px;
-            .panel-item-title{
+            .panel_item_title{
                 height: 50px;
                 line-height: 50px;
                 border-radius: 10px;
                 padding: 0 24px;
                 z-index: 2;
             }
-            .panel-item-content{
+            .panel_item_content{
                 display: none;
                 height: 100px;
                 line-height: 100px;
@@ -37,12 +37,12 @@
             }
 
             &.open{
-                .panel-item-title{
+                .panel_item_title{
                     background:rgb(3, 56, 16);
                     color:#FFF;
                     transition: all 0.3s;
                 }
-                .panel-item-content{
+                .panel_item_content{
                     display: block;
                 }
              }
