--- a/src/pages/home/style.module.scss
+++ b/src/pages/home/style.module.scss
@@ -4,7 +4,7 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
-.d-f{
+.d_f{
     display:flex;
     justify-content:space-evenly;
     align-items: center;
