--- a/src/pages/login/style.module.scss
+++ b/src/pages/login/style.module.scss
@@ -4,7 +4,7 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
-.login-container{
+.login_container{
     position: absolute;
     top: 50%;
     left: 50%;
