--- a/src/common/header/style.module.scss
+++ b/src/common/header/style.module.scss
@@ -3,9 +3,10 @@
     display:flex;
     justify-content: space-between;
     height: 100px;
-    .logo-img{
+    .logo_img{
+        width: 50%;
         img{
-        width: 100%;
+        width: 80%;
         height: 100px;
         }
     }
