--- a/src/pages/ibank/style.module.scss
+++ b/src/pages/ibank/style.module.scss
@@ -1,23 +1,36 @@
-.ibank{
-    min-height: calc(100vh - 150px);
-    background-image: url('../../assets/images/login-bg.png');
-    background-repeat: no-repeat;
-    background-size: cover;
+.ibank {
+  min-height: calc(100vh - 150px);
+  background-image: url('../../assets/images/login-bg.png');
+  background-repeat: no-repeat;
+  background-size: cover;
 
-    ul{
-        display:flex;
-        li{
-            list-style: none;
-            margin: 16px;
-            background:#fff;
-            border-radius:10px;
-            padding: 16px 32px;
-            box-shadow: 2px 2px 3px #777;
-            cursor:pointer;
-            &:hover{
-                background: rgb(26, 123, 7);
-                color: #fff;
-            }
+  ul {
+    display: flex;
+    li {
+        width: 150px;
+        height: 50px;
+      list-style: none;
+      margin: 16px;
+      background: #fff;
+      border-radius: 10px;
+      padding: 0;
+      box-shadow: 2px 2px 3px #777;
+      cursor: pointer;
+      &:hover {
+        background: rgb(26, 123, 7);
+        a {
+          color: #fff;
         }
+      }
+      a {
+        display: block;
+        height: 100%;
+        text-align: center;
+        line-height: 50px;
+
+        text-decoration: none;
+        color: rgb(23, 52, 30);
+      }
     }
+  }
 }
